<resources>

    <string name="app_name">SCC CISP Mobile Design Class Portal</string>
    <string name="validUserName">nbkaecy</string>
    <string name="validPassword">tramp</string>
    <string name="strUserID">UserID:</string>
    <string name="strUserName">User Name:</string>
    <string name="hintUserName">User Name</string>
    <string name="txtPassword">Password:</string>
    <string name="hintPassword">Password</string>
    <string name="strTitle">SCC CISP 362 Mobile App Programming</string>
    <string name="strLogin">Login</string>
    <string name="strError">Incorrect login (No. of tries</string>
    <string name="strNext">Next</string>
    <string name="strAboutMe">About Me</string>
    <string name="strAboutMyApp">About MyWeather App</string>
    <string name="strAppLink">Class Project App: Weather</string>

    <string name="strSpanish">Spanish</string>
    <string name="spn_strSacCity">Sac City Afiliación</string>
    <string name="spn_strWelcome">Bienvenido</string>
    <string name="spn_strLanguage">. Por favor elija su idioma y proceda,</string>
    <string name="spn_strDate">seleccione fecha</string>
    <string name="spn_strTime">seleccione el tiempo</string>
    <string name="spn_strName">Nombre:</string>
    <string name="spn_strEmail">email:</string>
    <string name="spn_strHi">Hola, mi nombre es Chakra Kunda. Gracias por tomarse el tiempo para revisar mi aplicación.</string>
    <string name="spn_strCategory">Category: Productivity</string>
    <string name="spn_strDesc">Mi aplicación muestra el clima local o para cualquier ciudad del mundo.</string>
    <string name="spn_strRating">Siga adelante y califique mi aplicación si lo desea.</string>
    <string-array name="spn_student_array">
        <item>Estudiante</item>
        <item>Facultad</item>
        <item>Alumni</item>
        <item>Futuro</item>
        <item>Ninguna</item>
    </string-array>

    <string name="strEnglish">English</string>
    <string name="strSacCity">Sac City Affiliation</string>
    <string name="strWelcome">Welcome</string>
    <string name="strLanguage">. Please choose your language and proceed,</string>
    <string name="strDate">Select Date </string>
    <string name="strTime">Select Time </string>
    <string name="strName">Name:</string>
    <string name="strEmail">email:</string>
    <string name="strHi">Hi, my name is Chakra Kunda. Thank you for taking the time to review my app.</string>
    <string name="strCategory">Category: Productivity</string>
    <string name="strDesc">My App displays local weather or for any city in the world.</string>
    <string name="strRating">Please go ahead and rate my App if you like.</string>
    <string name="strSubmit">Submit</string>
    <string-array name="student_array">
        <item>Student</item>
        <item>Faculty</item>
        <item>Alumni</item>
        <item>Prospective</item>
        <item>None</item>
    </string-array>

</resources>
