<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMyBlue"
    android:padding="10dp"
    tools:context="com.cisp362.cisspmobiledesignclassportal.Main2Activity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strWelcome"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginBottom="12dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:checkedButton="@+id/radioEnglish"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strEnglish"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/radioSpanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/strSpanish"
            android:textSize="18sp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/scaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5pt"
        android:text="@string/strSacCity"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/spnStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/student_array"/>

</LinearLayout>
